--- a/notes/compmus2023-w08.Rmd
+++ b/notes/compmus2023-w08.Rmd
@@ -74,9 +74,9 @@ Spotify segments have a lot of information inside them, but this week, we'll foc
 
 ```{r}
 wood <-
-  get_tidy_audio_analysis("6IQILcYkN2S2eSu5IHoPEH") %>%
-  select(segments) %>%
-  unnest(segments) %>%
+  get_tidy_audio_analysis("6IQILcYkN2S2eSu5IHoPEH") |>
+  select(segments) |>
+  unnest(segments) |>
   select(start, duration, pitches)
 ```
 
@@ -91,9 +91,9 @@ Finally we can plot, but beware that ggplot *centres* each tile on the *x* or *y
 I've added labels, a simpler theme, and a scientific colour scheme to make the plot look a little nicer.
 
 ```{r}
-wood %>%
-  mutate(pitches = map(pitches, compmus_normalise, "euclidean")) %>%
-  compmus_gather_chroma() %>% 
+wood |>
+  mutate(pitches = map(pitches, compmus_normalise, "euclidean")) |>
+  compmus_gather_chroma() |> 
   ggplot(
     aes(
       x = start + duration / 2,
@@ -137,49 +137,49 @@ Let's look at seven recordings of Josquin des Prez's 'Ave Maria'. The blank line
 ```{r}
 ## The Tallis Scholars
 tallis <-
-  get_tidy_audio_analysis("2J3Mmybwue0jyQ0UVMYurH") %>%
-  select(segments) %>%
-  unnest(segments) %>%
+  get_tidy_audio_analysis("2J3Mmybwue0jyQ0UVMYurH") |>
+  select(segments) |>
+  unnest(segments) |>
   select(start, duration, pitches)
 ## La Chapelle Royale
 chapelle <-
-  get_tidy_audio_analysis("4ccw2IcnFt1Jv9LqQCOYDi") %>%
-  select(segments) %>%
-  unnest(segments) %>%
+  get_tidy_audio_analysis("4ccw2IcnFt1Jv9LqQCOYDi") |>
+  select(segments) |>
+  unnest(segments) |>
   select(start, duration, pitches)
 ## The Cambridge Singers
 cambridge <-
-  get_tidy_audio_analysis("54cAT1TCFaZbLOB2i1y61h") %>%
-  select(segments) %>%
-  unnest(segments) %>%
+  get_tidy_audio_analysis("54cAT1TCFaZbLOB2i1y61h") |>
+  select(segments) |>
+  unnest(segments) |>
   select(start, duration, pitches)
 
 
 ## Oxford Camerata
 oxford <-
-  get_tidy_audio_analysis("5QyUsMY40MQ1VebZXSaonU") %>%
-  select(segments) %>%
-  unnest(segments) %>%
+  get_tidy_audio_analysis("5QyUsMY40MQ1VebZXSaonU") |>
+  select(segments) |>
+  unnest(segments) |>
   select(start, duration, pitches)
 ## Chanticleer
 chanticleer <-
-  get_tidy_audio_analysis("1bocG1N8LM7MSgj9T1n3XH") %>%
-  select(segments) %>%
-  unnest(segments) %>%
+  get_tidy_audio_analysis("1bocG1N8LM7MSgj9T1n3XH") |>
+  select(segments) |>
+  unnest(segments) |>
   select(start, duration, pitches)
 
 
 ## The Hilliard Ensemble
 hilliard <-
-  get_tidy_audio_analysis("2rXEyq50luqaFNC9DkcU6k") %>%
-  select(segments) %>%
-  unnest(segments) %>%
+  get_tidy_audio_analysis("2rXEyq50luqaFNC9DkcU6k") |>
+  select(segments) |>
+  unnest(segments) |>
   select(start, duration, pitches)
 ## The Gabrieli Consort
 gabrieli <-
-  get_tidy_audio_analysis("4NnJ4Jes8a8mQUfXhwuITx") %>%
-  select(segments) %>%
-  unnest(segments) %>%
+  get_tidy_audio_analysis("4NnJ4Jes8a8mQUfXhwuITx") |>
+  select(segments) |>
+  unnest(segments) |>
   select(start, duration, pitches)
 ```
 
@@ -187,11 +187,11 @@ The `compmus_long_distance()` helper function gets everything ready to plot the 
 
 ```{r}
 compmus_long_distance(
-  tallis %>% mutate(pitches = map(pitches, compmus_normalise, "chebyshev")),
-  chapelle %>% mutate(pitches = map(pitches, compmus_normalise, "chebyshev")),
+  tallis |> mutate(pitches = map(pitches, compmus_normalise, "chebyshev")),
+  chapelle |> mutate(pitches = map(pitches, compmus_normalise, "chebyshev")),
   feature = pitches,
   method = "euclidean"
-) %>%
+) |>
   ggplot(
     aes(
       x = xstart + xduration / 2,
