--- a/index.Rmd
+++ b/index.Rmd
@@ -16,9 +16,9 @@ editor_options:
 ```{r, setup}
 library(tidyverse)
 library(plotly)
+library(cowplot)
 library(spotifyr)
 library(compmus)
-library(cowplot)
 ```
 
 ### Welcome to Computational Musicology 2023!
@@ -162,88 +162,7 @@ ggplotly(february_dip)
 
 In March 2019, [The Economist](https://www.economist.com/graphic-detail/2020/02/08/data-from-spotify-suggest-that-listeners-are-gloomiest-in-february?fsrc=scn/fb/te/bl/ed/sadsongssaysomuchdatafromspotifysuggestthatlistenersaregloomiestinfebruarygraphicdetail) published a graphic showing a worldwide dip in the emotional valence of the music to people people listen around February each year. The graphic also broke down the emotional valence for every month of the year for a selection of Spotify markets, and it revealed quite a surprise: although overall, there seemed to be two large groups, with Latin America and Spain listening to more positively valenced music than most of the rest of the world, the Netherlands stood on its own somewhere in between these two extremes. This graphic compares Spotify Top 50 in the Netherlands against Belgium, a more typical neighbouring country, as well as the worldwide average, on the standard valence--arousal model. More popular songs (worldwide) have larger dots; more danceable songs are yellow.
 
-### The Tallis Scholars sing Josquin more slowly than La Chapelle Royale -- except for one part [chroma features].
-
-```{r tallis}
-tallis <-
-  get_tidy_audio_analysis("2J3Mmybwue0jyQ0UVMYurH") %>%
-  select(segments) %>%
-  unnest(segments) %>%
-  select(start, duration, pitches)
-chapelle <-
-  get_tidy_audio_analysis("4ccw2IcnFt1Jv9LqQCOYDi") %>%
-  select(segments) %>%
-  unnest(segments) %>%
-  select(start, duration, pitches)
-maria_dist <-
-  compmus_long_distance(
-    tallis %>% mutate(pitches = map(pitches, compmus_normalise, "manhattan")),
-    chapelle %>% mutate(pitches = map(pitches, compmus_normalise, "manhattan")),
-    feature = pitches,
-    method = "aitchison"
-  )
-```
-
-```{r tallis-plot}
-maria <-
-  maria_dist %>%
-  mutate(
-    tallis = xstart + xduration / 2,
-    chapelle = ystart + yduration / 2
-  ) %>%
-  ggplot(
-    aes(
-      x = tallis,
-      y = chapelle,
-      fill = d
-    )
-  ) +
-  geom_tile(aes(width = xduration, height = yduration)) +
-  coord_fixed() +
-  scale_x_continuous(
-    breaks = c(0, 60, 105, 150, 185, 220, 280, 327),
-    labels =
-      c(
-        "Ave Maria",
-        "Ave cujus conceptio",
-        "Ave cujus nativitas",
-        "Ave pia humilitas",
-        "Ave vera virginitas",
-        "Ave preclara omnibus",
-        "O Mater Dei",
-        ""
-      ),
-  ) +
-  scale_y_continuous(
-    breaks = c(0, 45, 80, 120, 145, 185, 240, 287),
-    labels =
-      c(
-        "Ave Maria",
-        "Ave cujus conceptio",
-        "Ave cujus nativitas",
-        "Ave pia humilitas",
-        "Ave vera virginitas",
-        "Ave preclara omnibus",
-        "O Mater Dei",
-        ""
-      ),
-  ) +
-  scale_fill_viridis_c(option = "E", guide = "none") +
-  theme_classic() +
-  theme(axis.text.x = element_text(angle = 30, hjust = 1)) +
-  labs(x = "The Tallis Scholars", y = "La Chapelle Royale")
-maria
-```
-
-***
-
-This visualisation of two performances of the famous ‘Ave Maria’ setting of Josquin des Prez uses the Aitchison distance between chroma features to show how the two performances align with one another. 
-
-For the first four stanzas, the relationship between the performances is consistent: the Tallis Scholars sing the piece somewhat more slowly than La Chapelle Royale. For the fifth stanza (*Ave vera virginitas*, starting about 3:05 into the Tallis Scholars’ performance and 2:25 into La Chapelle Royale’s), the Tallis Scholars singing faster than La Chapelle Royale, but at the beginning of the sixth stanza (*Ave preclara omnibus*, starting about 3:40 into the the Tallis Scholars’ performance and 3:05 into La Chapelle Royale’s) the Tallis Scholars return to their regular tempo relationship with La Chapelle.
-
-Although the interactive mouse-overs from `ggplotly` are very helpful for understanding heat maps, they are very computationally intensive. Chromagrams and similarity matrices are often better as static images, like the visualisation at left.
-
-### Vizualizing More Chroma 
+### Chromagrams Can Be Fun! [chroma features]
 
 ```{r pop-chroma}
 
@@ -340,3 +259,83 @@ The second plot shows Beyonce's [Love on Top](https://open.spotify.com/track/1z6
 
 The last plot shows the tune [All I Need](https://open.spotify.com/track/164VgxTozx99XCinCB9ITR?si=612e1f79f92b4c23), which also has a modulation, but interestingly moves from [Eb Major](https://youtube.com/watch?v=Dv9iaRJG2Yc&si=EnSIkaIECMiOmarE&t=128) to what is essentially [Bb half sharp in standard tuning (A4 = ~452.89 according to this transcription!)](https://youtube.com/watch?v=Dv9iaRJG2Yc&si=EnSIkaIECMiOmarE&t=128). This point is highlighted by the red lines on the chromagram and notice that since this "key" does not fit that well into A440, the relative magnitute of the pitches that were quite prominent (Bb + F) are not really replaced by any other pitches!
 
+### The Tallis Scholars sing Josquin more slowly than La Chapelle Royale -- except for one part [chroma features for DTW].
+
+```{r tallis}
+tallis <-
+  get_tidy_audio_analysis("2J3Mmybwue0jyQ0UVMYurH") %>%
+  select(segments) %>%
+  unnest(segments) %>%
+  select(start, duration, pitches)
+chapelle <-
+  get_tidy_audio_analysis("4ccw2IcnFt1Jv9LqQCOYDi") %>%
+  select(segments) %>%
+  unnest(segments) %>%
+  select(start, duration, pitches)
+maria_dist <-
+  compmus_long_distance(
+    tallis %>% mutate(pitches = map(pitches, compmus_normalise, "manhattan")),
+    chapelle %>% mutate(pitches = map(pitches, compmus_normalise, "manhattan")),
+    feature = pitches,
+    method = "aitchison"
+  )
+```
+
+```{r tallis-plot}
+maria <-
+  maria_dist %>%
+  mutate(
+    tallis = xstart + xduration / 2,
+    chapelle = ystart + yduration / 2
+  ) %>%
+  ggplot(
+    aes(
+      x = tallis,
+      y = chapelle,
+      fill = d
+    )
+  ) +
+  geom_tile(aes(width = xduration, height = yduration)) +
+  coord_fixed() +
+  scale_x_continuous(
+    breaks = c(0, 60, 105, 150, 185, 220, 280, 327),
+    labels =
+      c(
+        "Ave Maria",
+        "Ave cujus conceptio",
+        "Ave cujus nativitas",
+        "Ave pia humilitas",
+        "Ave vera virginitas",
+        "Ave preclara omnibus",
+        "O Mater Dei",
+        ""
+      ),
+  ) +
+  scale_y_continuous(
+    breaks = c(0, 45, 80, 120, 145, 185, 240, 287),
+    labels =
+      c(
+        "Ave Maria",
+        "Ave cujus conceptio",
+        "Ave cujus nativitas",
+        "Ave pia humilitas",
+        "Ave vera virginitas",
+        "Ave preclara omnibus",
+        "O Mater Dei",
+        ""
+      ),
+  ) +
+  scale_fill_viridis_c(option = "E", guide = "none") +
+  theme_classic() +
+  theme(axis.text.x = element_text(angle = 30, hjust = 1)) +
+  labs(x = "The Tallis Scholars", y = "La Chapelle Royale")
+maria
+```
+
+***
+
+This visualisation of two performances of the famous ‘Ave Maria’ setting of Josquin des Prez uses the Aitchison distance between chroma features to show how the two performances align with one another. 
+
+For the first four stanzas, the relationship between the performances is consistent: the Tallis Scholars sing the piece somewhat more slowly than La Chapelle Royale. For the fifth stanza (*Ave vera virginitas*, starting about 3:05 into the Tallis Scholars’ performance and 2:25 into La Chapelle Royale’s), the Tallis Scholars singing faster than La Chapelle Royale, but at the beginning of the sixth stanza (*Ave preclara omnibus*, starting about 3:40 into the the Tallis Scholars’ performance and 3:05 into La Chapelle Royale’s) the Tallis Scholars return to their regular tempo relationship with La Chapelle.
+
+Although the interactive mouse-overs from `ggplotly` are very helpful for understanding heat maps, they are very computationally intensive. Chromagrams and similarity matrices are often better as static images, like the visualisation at left.
